# apiforge

./: .env.example  .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  run.py
apiforge/: __init__.py  _version.py  cli.py  config.py  constants.py  exceptions.py  logger.py
apiforge/analysis/: __init__.py  constraint_extractor.py  parameter_analyzer.py  schema_analyzer.py
apiforge/analysis/test_design/: __init__.py  boundary_value.py  decision_table.py  state_transition.py
apiforge/core/: __init__.py  decorators.py  models.py  persistence.py  persistent_queue.py  queue.py  scheduler.py  task.py  worker.py
apiforge/core/db/: sqlite_queue.py
apiforge/core/db/sqlite/: __init__.py  connection.py  database.py  schema.sql
apiforge/core/db/sqlite/repositories/: __init__.py  progress.py  queue.py  session.py  task.py
apiforge/formatters/: __init__.py  base.py  csv_formatter.py  csv_template.py
apiforge/generation/: __init__.py  generator.py  orchestrator.py
apiforge/generation/optimizers/: __init__.py  combination_reducer.py  pairwise_optimizer.py  test_optimizer.py
apiforge/parser/: __init__.py  spec_loader.py  spec_parser.py
apiforge/providers/: __init__.py  base.py  custom.py  openai.py  prompts.py  qwen.py
apiforge/scheduling/: __init__.py  api_pattern_matcher.py  dynamic_scaler.py  hybrid_scheduler.py  models.py  progressive_scheduler.py
apiforge/utils/: __init__.py  async_utils.py  helpers.py  validators.py
apiforge/web/: app.py  real_processor.py  worker_manager.py
apiforge/web/migrations/: add_worker_support.sql
apiforge/web/static/css/: main.css  modern.css
apiforge/web/static/js/: api.js  charts.js  utils-min.js  utils.js  websocket.js
apiforge/web/static/pages/: errors.html  index.html  monitor.html  statistics.html
scripts/: build.sh  test_install.sh
